--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<header>
 			<div class="wrapper navbar">
 				
-					<div class="logo"><h1>Yurilicious</h1></div>
+					<div class="logo"><h1>Yurilicious!</h1></div>
 					<nav>
 						<ul>
 							<li>
