Added target blank for opening links in new window

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 					<nav>
 						<ul>
 							<li>
-								<a href="https://linkr.bio/yurielle">About</a>
+								<a target="_blank" href="https://linkr.bio/yurielle">About</a>
 							</li>
 							<li>
-								<a href="https://twitter.com/YurielleC">Contact</a>
+								<a target="_blank" href="https://twitter.com/YurielleC">Contact</a>
 							</li>
 						</ul>
 					</nav>
@@ -35,7 +35,7 @@
 			<div class="hero-info">
 				<h1>You'll never feel alone!</h1>
 				<p>The coolest vtuber community on earth!</p>
-				<a href="https://discord.com/invite/Rku2jscVsE" class="button">Join now</a>
+				<a target="_blank" href="https://discord.com/invite/Rku2jscVsE" class="button">Join now</a>
 			</div>
 
 			<div class="hero-image">
@@ -94,7 +94,7 @@
 				<h1>Available anytime anywhere</h1>
 				<h3>Specialty wowowow</h3>
 				<p>Aku cinta kalian semua pokoknya I love you full!! Thanks for coming <3</p>
-				<a href="https://discord.com/invite/Rku2jscVsE" class="button">Join now</a>
+				<a target="_blank" href="https://discord.com/invite/Rku2jscVsE" class="button">Join now</a>
 			</div>
 		</div>
 	</section>
@@ -127,7 +127,7 @@
 				</div>
 			<p>We understand you're always on-the-go, so we offer products that do the multi-tasking for you</p>
 
-			<a href="https://discord.com/invite/Rku2jscVsE" class="button">Join now</a>
+			<a target="_blank" href="https://discord.com/invite/Rku2jscVsE" class="button">Join now</a>
 
 		</div>
 	</section>
